# discord-bot

./: .env.example  .envrc  .gitignore  .rustfmt.toml  Cargo.toml  devenv.nix  devenv.yaml  diesel.toml  flake.nix  renovate.json5
.github/workflows/: ci.yaml  devenv.yaml  nix.yaml
.reuse/: dep5
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2024-01-14-025434_create_messages/: down.sql  up.sql
migrations/2024-01-17-055307_create_degen_leaderboard/: down.sql  up.sql
migrations/2024-01-18-051642_create_bot_options/: down.sql  up.sql
migrations/2024-01-18-112430_create_starboard/: down.sql  up.sql
migrations/2024-01-21-113202_json_options/: down.sql  up.sql
nix/: default.nix  nixos-module.nix
nix/dev/: flake.nix
src/: dn.rs  event_handler.rs  main.rs
src/commands/: degen_leaderboard.rs  dn_stats.rs  mod.rs  starboard.rs
src/event_handler/: dn.rs  mod.rs  starboard.rs
src/sql/: message.rs  mod.rs  models.rs  options.rs  schema.rs  starboard_message.rs
