# SPDX-FileCopyrightText: 2024 winston <hey@winston.sh>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "richbot"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
diesel_json = "0.2.1"
env_logger = "0.11.0"
log = "0.4.20"
parking_lot = "0.12.1"
poise = "0.6.1"
serde = "1.0.195"
serde_json = "1.0.111"

[dependencies.diesel]
version = "2.1.4"
default-features = false
features = ["chrono", "postgres", "r2d2", "serde_json"]

[dependencies.diesel_migrations]
version = "2.1.0"
features = ["postgres"]

[dependencies.tokio]
version = "1.35.1"
features = ["rt-multi-thread"]

[profile.release]
lto = true
opt-level = 3
strip = true
